fix: squash checkout and cart related bugs
- fix total converting to string during payment phase of checkout
- fix itemsPerPage dropdown not updating itemsPerPage
- fix price and dimension filters not working
- fix cart item totals displaying more than two decimals
- fix Terms listing incorrect site address

--- a/client/src/customer/features/CartItem/cart-item.css
+++ b/client/src/customer/features/CartItem/cart-item.css
@@ -9,3 +9,8 @@ input[type="number"]::-webkit-inner-spin-button {
 input[type="number"] {
     -moz-appearance: textfield;
 }
+
+.update-quantity,
+.remove-button {
+    cursor: pointer;
+}
